projet_gl/src/test/deca/syntax/invalid/opExactCMP/incorrectNotEquals.deca
// Description:
//    invalid test parser for binary expression (!=).
//
// Resultats:
//    ligne 11 : no viable alternative at input '!'
//
// Historique:
//    cree le 12/01/2024

{
   x ! y;
}